...
      return 'Standing Overhead Press';
    }
    if (lower == 'barbell bent over row reverse grip') {
      return 'Reverse Grip Barbell Row';
    }
    if (lower == 'dumbbell incline bench press') {
      return 'Incline Dumbbell Press';
    }
    if (lower == 'dumbbell biceps curl') {
      return 'Dumbbell Bicep Curl';
    }
    if (lower == 'barbell biceps curl') {
      return 'Barbell Bicep Curl';
...
